<?xml version="1.0"?>
<package>
  <name>mesh_core</name>
  <version>0.0.0</version>
  <description>The mesh_core package</description>

  <maintainer email="acorn@willowgarage.com">Acorn</maintainer>
  <author email="acorn@willowgarage.com">Acorn</author>
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/mesh_core</url> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_stl_containers</build_depend>
  <build_depend>rosconsole_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>eigen_stl_containers</run_depend>
  <run_depend>rosconsole_bridge</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
