<?xml version="1.0"?>
<package>
  <name>mesh_ros</name>
  <version>0.0.0</version>
  <description>The mesh_ros package</description>

  <maintainer email="acorn@willowgarage.com">Acorn</maintainer>
  <author email="acorn@willowgarage.com">Acorn</author>
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/mesh_ros</url> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_stl_containers</build_depend>
  <build_depend>console_bridge</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>mesh_core</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>libogre-dev</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>eigen_stl_containers</run_depend>
  <run_depend>console_bridge</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>mesh_core</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>libogre-dev</run_depend>
  <run_depend>pluginlib</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
