<package>
  <name>moveit_ork</name>
  <version>0.1.0</version>
  <description>ORK interfaces to MoveIt</description>

  <author email="isucan@willowgarage.com">Ioan Sucan</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>

  <buildtool_depend>catkin</buildtool_depend> 
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>actionlib</build_depend> 
  <build_depend>tf</build_depend>
  <build_depend>python</build_depend>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend> 
  <run_depend>tf</run_depend>
  <run_depend>python</run_depend>

</package>
