<package>
  <name>moveit_advanced_perception</name>
  <version>0.3.0</version>
  <description>Advanced MoveIt Components for perception</description>

  <author email="isucan@willowgarage.com">Ioan Sucan</author>
  <author email="gedikli@willowgarage.com">Suat Gedikli</author>

  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>glut</run_depend>
  <run_depend>libglew-dev</run_depend>
  <run_depend>opengl</run_depend>

  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>opengl</build_depend>

  <export>
    <moveit_ros_perception plugin="${prefix}/depth_image_octomap_updater_plugin_description.xml"/> 
  </export>

</package>
