<package>

  <name>pr2_advanced_config</name>
  <version>0.3.9</version>
  <description>
    Manually specified settings for use with advanced components of MoveIt!
  </description>
  <author email="assistant@moveit.ros.org">MoveIt Setup Assistant</author>
  <maintainer email="assistant@moveit.ros.org">MoveIt Setup Assistant</maintainer>

  <license>Proprietary</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>

  <run_depend>pr2_moveit_config</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
